--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 
 <body class="preload">
 	<div id="main">
-		<header th:replace="fragments.html::header-logged-out"></header>
+		<header th:replace="fragments.html::header-index"></header>
 		<div id="hero-gravity"></div>
 		
 		<section id="hero">
