--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Alovoa">
+	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
 	<link rel="manifest" href="/manifest/manifest.json">
 
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
@@ -14,6 +15,7 @@
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
+	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/search.css" />
@@ -56,6 +58,7 @@
 	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/tools/loader.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
