--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Alovoa">
+	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
 	<link rel="manifest" href="/manifest/manifest.json">
 	<title>Info</title>
 </head>
