--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -73,12 +73,12 @@
 						<div class="box no-shadow">
 							<div class="columns">
 								<button class="button colored"
-									style="background-color: #4285F4; width: 100%; margin-right: 4px;margin-bottom: 8px;"
+									id="google-auth"
 									onclick="window.location='/oauth2/authorization/google'">
 									<img src="/img/g-icon.svg" style="height: 32px;"><span
 										style="padding-left: 6px; color: white;" th:text="#{login.oauth.google}"></span>
 								</button>
-								<button class="button colored" style="background-color: #4267b2; width: 100%;"
+								<button class="button colored" id="facebook-auth"
 									onclick="window.location='/oauth2/authorization/facebook'">
 									<img src="/img/f-icon.svg" style="height: 32px;"><span
 										style="padding-left: 6px; color: white;"
