--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -143,13 +143,12 @@
 				<div class="container" style="margin-bottom: 24px;" id="oauth-div">
 					<div class="box no-shadow">
 						<div class="columns">
-							<button class="button colored"
-								style="background-color: #4285F4; width: 100%; margin-right: 4px; margin-bottom: 8px;"
+							<button class="button colored" id="google-auth"
 								onclick="window.location='/oauth2/authorization/google'">
 								<img src="/img/g-icon.svg" style="height: 32px;"><span
 									style="padding-left: 6px; color: white;" th:text="#{register.oauth.google}"></span>
 							</button>
-							<button class="button colored" style="background-color: #4267b2; width: 100%;"
+							<button id="facebook-auth" class="button colored"
 								onclick="window.location='/oauth2/authorization/facebook'">
 								<img src="/img/f-icon.svg" style="height: 32px;"><span
 									style="padding-left: 6px; color: white;"
