--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,7 +13,7 @@
 	<th:block th:replace="fragments.html::bulma"></th:block>
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
-	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
+	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{register.title}"></title>
 </head>
@@ -25,121 +25,14 @@
 			<div class="container">
 				<h3 class="title" th:text="#{register.title}"></h3>
 				<p class="subtitle" th:text="#{register.subtitle}"></p>
-				<div class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
-					<header class="card-header collapsible-header no-shadow"
-						style="margin-left: 10px; margin-right: 10px;">
-						<a href="#collapsible-card" data-action="collapse" id="email-auth"
-							class="card-header-icon is-hidden-fullscreen full-width button is-colored is-rounded"
-							aria-label="more options"
-							style="display: flex; justify-content: center; background-color: initial;">
-							<i class="fa fa-envelope fa-lg"></i>
-							<span class="label" style="margin-bottom: initial; padding-left: 6px;"
-								th:text="#{register.email.sign-up}"></span>
-						</a>
-					</header>
-					<div id="collapsible-card" class="is-collapsible">
-						<div style="margin: 8px; margin-bottom: 48px;" class="box">
-							<div style="padding-top: 4px;" class="collapsible-mobile"></div>
-							<h3 style="font-size: 1.3em; font-weight: 600; margin-bottom: 12px;"
-								th:text="#{register.email.sign-up}" class="collapsible-desktop"></h3>
-							<form th:action="@{/register}" method="POST" id="register-form">
-								<div class="field">
-									<label class="label" th:text="#{first-name}" style="float: left;"></label><span
-										class="asterisk">*</span>
-									<div class="control">
-										<input class="input" type="text" name="firstName" minlength="2" maxlength="10"
-											required>
-									</div>
-								</div>
-								<div class="field">
-									<label class="label" th:text="#{email}" style="float: left;"></label><span
-										class="asterisk">*</span>
-									<div class="control">
-										<input class="input" type="email" name="email" required>
-									</div>
-								</div>
-								<div class="field">
-									<label class="label" th:text="#{dob}" style="float: left;"></label><span
-										class="asterisk">*</span>
-									<div class="control">
-										<input id="dob-input" class="input" type="date" name="dateOfBirth"
-											style="width: 100%;" required>
-									</div>
-								</div>
-
-								<div class="field">
-									<label class="label" th:text="#{password}"></label>
-									<div class="control">
-										<input class="input" type="password" name="password" id="password" required>
-									</div>
-								</div>
-								<div class="field">
-									<label class="label" th:text="#{password-repeat}"></label>
-									<div class="control">
-										<input class="input" type="password" id="password-repeat" required>
-									</div>
-								</div>
-
-								<div class="notification is-danger" id="password-info"
-									th:text="#{password-change.warning}">
-								</div>
-								
-								<div class="field">
-									<label class="label" th:text="#{gender}" style="float: left;"></label><span
-										class="asterisk">*</span>
-									<div class="select">
-										<select name="gender" required>
-											<option value=""></option>
-											<th:block th:each="gender : ${genders}">
-												<option th:value="${gender.id}" th:if="${gender.text == 'male'}"
-													th:text="#{profile.gender.male}"></option>
-												<option th:value="${gender.id}" th:if="${gender.text == 'female'}"
-													th:text="#{profile.gender.female}"></option>
-												<option th:value="${gender.id}" th:if="${gender.text == 'other'}"
-													th:text="#{profile.gender.other}"></option>
-											</th:block>
-										</select>
-									</div>
-								</div>
-								
-								<div class="field">
-									<label class="label" th:text="#{register.referral-code} + ' (' + #{optional} +')'" style="float: left;"></label>
-									<div class="control">
-										<input class="input" name="referrerCode" id="referrer">
-									</div>
-								</div>
-								
-								<div th:replace="fragments.html::captcha"></div>
-
-								<div style="height: 24px"></div>
-
-								<div class="field">
-									<div class="field">
-										<input id="tos" type="checkbox" name="tos" class="switch"
-											style="position: absolute" required> <label for="tos"
-											th:utext="#{register.tos-agree}"> </label>
-									</div>
-									<div class="field">
-										<input id="pp" type="checkbox" name="pp" class="switch"
-											style="position: absolute" required> <label for="pp"
-											th:utext="#{register.privacy-agree}"> </label>
-									</div>
-								</div>
-
-								<div class="register-warning" th:text="#{register.asterisk-warning}"></div>
-
-								<div class="field is-grouped" style="display: flex; justify-content: flex-start;">
-									<div class="control">
-										<button class="button is-danger is-outlined" type="button" onclick="window.location = '/'" th:text="#{cancel}"></button>
-									</div>
-									<div class="control">
-										<button class="button colored is-link" type="submit" th:text="#{submit}"></button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
+				<a id="email-auth" onclick="emailAuthClick()"
+					class=" full-width button is-colored is-rounded"
+					aria-label="more options"
+					style="display: flex; justify-content: center; background-color: initial;">
+					<i class="fa fa-envelope fa-lg"></i>
+					<span class="label" style="margin-bottom: initial; padding-left: 6px;"
+						th:text="#{register.email.sign-up}"></span>
+				</a>
 				<div class="container" style="margin-bottom: 24px;" id="oauth-div">
 					<div class="box no-shadow">
 						<div class="columns">
@@ -164,7 +57,113 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	
+	<div id="email-register-modal" class="modal modal-fx-fadeInScale">
+		<div class="modal-background" onclick="closeModal()"></div>
+		<div class="modal-content">
+			<div class="box">
+				<form th:action="@{/register}" method="POST" id="register-form" class="">
+					<div class="field">
+						<label class="label" th:text="#{first-name}" style="float: left;"></label><span
+							class="asterisk">*</span>
+						<div class="control">
+							<input class="input" type="text" name="firstName" minlength="2" maxlength="10"
+								required>
+						</div>
+					</div>
+					<div class="field">
+						<label class="label" th:text="#{email}" style="float: left;"></label><span
+							class="asterisk">*</span>
+						<div class="control">
+							<input class="input" type="email" name="email" required>
+						</div>
+					</div>
+					<div class="field">
+						<label class="label" th:text="#{dob}" style="float: left;"></label><span
+							class="asterisk">*</span>
+						<div class="control">
+							<input id="dob-input" class="input" type="date" name="dateOfBirth"
+								style="width: 100%;" required>
+						</div>
+					</div>
 
+					<div>
+						<div class="field">
+							<label class="label" th:text="#{password}"></label>
+							<div class="control">
+								<input class="input" type="password" name="password" id="password" required>
+							</div>
+						</div>
+						<div class="field">
+							<label class="label" th:text="#{password-repeat}"></label>
+							<div class="control">
+								<input class="input" type="password" id="password-repeat" required>
+							</div>
+						</div>
+	
+						<div class="notification is-danger" id="password-info" style="margin-bottom: 0.75rem;"
+							th:text="#{password-change.warning}">
+						</div>
+					</div>
+					
+					<div class="field">
+						<label class="label" th:text="#{gender}" style="float: left;"></label><span
+							class="asterisk">*</span>
+						<div class="select">
+							<select name="gender" required>
+								<option value=""></option>
+								<th:block th:each="gender : ${genders}">
+									<option th:value="${gender.id}" th:if="${gender.text == 'male'}"
+										th:text="#{profile.gender.male}"></option>
+									<option th:value="${gender.id}" th:if="${gender.text == 'female'}"
+										th:text="#{profile.gender.female}"></option>
+									<option th:value="${gender.id}" th:if="${gender.text == 'other'}"
+										th:text="#{profile.gender.other}"></option>
+								</th:block>
+							</select>
+						</div>
+					</div>
+					
+					<div>
+						<div class="field">
+							<label class="label" th:text="#{register.referral-code} + ' (' + #{optional} +')'" style="float: left;"></label>
+							<div class="control">
+								<input class="input" name="referrerCode" id="referrer">
+							</div>
+						</div>
+						
+						<div th:replace="fragments.html::captcha"></div>
+	
+						<div style="height: 24px"></div>
+	
+						<div class="field">
+							<div class="field">
+								<input id="tos" type="checkbox" name="tos" class="switch"
+									style="position: absolute" required> <label for="tos"
+									th:utext="#{register.tos-agree}"> </label>
+							</div>
+							<div class="field">
+								<input id="pp" type="checkbox" name="pp" class="switch"
+									style="position: absolute" required> <label for="pp"
+									th:utext="#{register.privacy-agree}"> </label>
+							</div>
+						</div>
+	
+						<div class="register-warning" th:text="#{register.asterisk-warning}"></div>
+
+						<div class="field is-grouped" style="display: flex; justify-content: flex-start;">
+							<div class="control">
+								<button class="button is-danger is-outlined" type="button" onclick="closeModal()" th:text="#{cancel}"></button>
+							</div>
+							<div class="control">
+								<button class="button colored is-link" type="submit" th:text="#{submit}"></button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
 
 	<footer th:replace="fragments.html::footer"></footer>
@@ -172,7 +171,6 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/check-password.js"></script>
