--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -305,6 +305,14 @@ input[type=range].slider {
 	color: #9E9E9E !important;
 }
 
+#email-auth {
+	margin-bottom: 8px;
+}
+
+#oauth-div > div {
+	padding: 0.7rem !important;
+}
+
 #google-auth {
 	background-color: #4285F4; width: 100%; margin-right: 4px; margin-bottom: 8px;
 }
@@ -312,7 +320,6 @@ input[type=range].slider {
 #facebook-auth {
 	background-color: #4267b2; width: 100%;
 }
-
 
 @media screen and (max-width: 1050px) {
 	.navigation-item span {
