Fix missing captcha for user profile modals

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -507,6 +507,7 @@
 					<th:block th:replace="fragments.html::user-profile"></th:block>
 				</div>
 			</div>
+			<script src="/js/tools/refresh-captcha.js"></script>
 		</div>
 		<script>
 		$(function() {var swiper = new Swiper('.swiper-container-user-profile', { navigation : {nextEl : '.swiper-button-next',prevEl : '.swiper-button-prev',},});});
